--- a/src/shared/Header/Header.module.scss
+++ b/src/shared/Header/Header.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   width: 100%;
+  margin-bottom: 30px;
 }
 
 .wrapper {
@@ -10,8 +11,11 @@
   align-items: center;
 }
 
-.logo {
+.change_theme, .logo {
   margin-right: 20px;
+}
+
+.logo {
   svg {
     width: 65px;
     height: 65px;
