Change theme color

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,7 @@ body {
   position: relative;
   font-family: "Montserrat", sans-serif;
   background-color: #ffffff;
+  background: var(#{--body-background-default});
 }
 
 .container {
